# Desktop_Support

./: .gitignore  README.md  RIGHT_CLICK_MANAGER.vbs  START.cmd  START.vbs  START_DEBUG.cmd  pyproject.toml  restart_launcher_show.vbs  run_launcher.ps1  run_launcher_debug.ps1  run_self_test.ps1  start_launcher_hidden.vbs  start_launcher_show.vbs
docs/: codex_review_v0.1.md  iso_pdf_workbench_audit.md  iso_pdf_workbench_next_stage_v0.1.md  ui_uplift_mockup.html  ui_uplift_proposal_v0.1.md  安全清除工作台_GUI重設計_codex指令書_v0.1.md  指令面板擴充與延伸_codex指令書_v0.1.md  設計建議_面板與延伸定位.md
launcher/: __init__.py
scripts/: install_explorer_context_menu.ps1  install_ocr.ps1  uninstall_explorer_context_menu.ps1
tests/: test_app_main.py  test_batch_detect_thread.py  test_command_palette.py  test_context_inbox.py  test_context_menu_action_dialog.py  test_context_menu_registry.py  test_context_model.py  test_context_service.py  test_copy_paths.py  test_dock_window.py  test_edge_positioner.py  test_explorer_context.py  test_explorer_context_menu_dialog.py  test_file_lock_checker_dialog.py  test_file_locks.py  test_installed_app_picker_dialog.py  test_iso_autopilot_page.py  test_iso_naming.py  test_iso_one_click_workflow.py  test_iso_preview_panel.py  test_iso_profile.py  test_iso_profile_dialog.py  test_iso_rename_plan.py  test_iso_result_dialog.py  test_iso_review_filter.py  test_iso_styles.py  test_iso_validator.py  test_iso_vision_correction.py  test_iso_workflow_status.py  test_job_model.py  test_job_monitor.py  test_palette_search.py  test_pdf_actions.py  test_plugin_manager_dialog.py  (+16 more)
(+99 files in other folders)
