[project]
name = "engineering-launcher"
version = "0.1.0"
description = "Lightweight Windows engineering launcher and automation dock."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "opencv-python-headless>=4.10",
    "openpyxl>=3.1",
    "PyQt6>=6.7",
    "pypdf>=5.0",
    "pywin32>=306; platform_system == 'Windows'",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
engineering-launcher = "launcher.app.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
